capstone/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sandbox-deployment
  labels:
    name: sandbox-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app : sandbox

  template:
    metadata:
      labels:
        app: sandbox

    spec:
      containers:
        - image: sandbox:latest
          imagePullPolicy: IfNotPresent
          name:  main-sandbox-container

          resources:
          limits:
              cpu: "500M"
              memory: "400Mi"
          requests:
              cpu: "250M"
              memory: "55Mi"

          livenessProbe:
            httpGet:
              path: /api/sandbox/health
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/sandbox/health
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10

          ports:
            - containerPort: 3000
              name: main-sandbox-port
